--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <header class="center">
 
             <div class="navbar">
-                <a class="active" href="#">HOME</a>
-                <a class="active" href="#">FACTS</a>
-                <a class="active" href="#">LIST</a>
+                <a class="active" href="../info/info.html">HOME</a>
+                <a class="active" href="../facts page/facts.html">FACTS</a>
+                <a class="active" href="../index.html">OBJECTS</a>
 
             </div>
 
@@ -38,42 +38,42 @@
             </div>
         </a>
 
-        <a>
+        <a href="swan-steps/swan-steps.html">
             <div class="card3">
                 <img src="img/swan-outline.png" id="swan" class="img-4">
                 <img src="img/sawn blue1.png" id="swan" class="hover_img-4">
             </div>
         </a>
 
-        <a>
-            <div class="card4">
+        <a href="heart-steps/heart-steps.html">
+            <div class="card4" >
                 <img src="img/heart outline.png" id="heart" class="img-5">
                 <img src="img/heart origami.png" id="heart" class="hover_img-5">
             </div>
         </a>
 
-        <a>
+        <!-- <a>
             <div class="card5">
                 <img src="img/bag outline.png" id="bag" class="img-6">
                 <img src="img/bag origami.png" id="bag" class="hover_img-6">
             </div>
-        </a>
+        </a> -->
 
-        <a>
+        <a href="frog-steps/frog-steps.html">
             <div class="card6">
                 <img src="img/frog outline.png" id="frog" class="img-7">
                 <img src="img/frog origami.png" id="frog" class="hover_img-7">
             </div>
         </a>
 
-        <a>
+        <a  href="butterfly-steps/butterfly-steps.html">
             <div class="card7">
                 <img src="img/butterfly outline.png" id="butterfly" class="img-8">
                 <img src="img/butterfly origami.png" id="butterfly" class="hover_img-8">
             </div>
         </a>
 
-        <a>
+        <a href="bird-steps/bird-steps.html">
             <div class="card8">
                 <img src="img/bird outline.png" id="bird" class="img-9">
                 <img src="img/bird origami.png" id="bird" class="hover_img-9">
